--- a/html.html
+++ b/html.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 </head>
 <body>
-<canvas id="canvas3D" style="width: 90%;">Ваш браузер не поддерживает элемент canvas</canvas>
+<canvas id="canvas3D" width="1264%" height="580%">Ваш браузер не поддерживает элемент canvas</canvas>
 <script  type="text/javascript" src="gl-matrix-min.js"></script>
  
 <script id="shader-fs" type="x-shader/x-fragment">
