add animation and stylized

--- a/html.html
+++ b/html.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 </head>
 <body>
-<canvas id="canvas3D" width="1264%" height="580%">Ваш браузер не поддерживает элемент canvas</canvas>
+<canvas id="canvas3D" width="1500" height="1000" style="width: 100vw; height: 100vh; aspect-ratio: 16 / 10;">Ваш браузер не поддерживает элемент canvas</canvas>
 <script  type="text/javascript" src="gl-matrix-min.js"></script>
  
 <script id="shader-fs" type="x-shader/x-fragment">
@@ -44,7 +44,7 @@ var zTranslation = -2.0; // смещение по оси Z
  
 var mvMatrix = glMatrix.mat4.create(); 
 var pMatrix = glMatrix.mat4.create();
- 
+
 // установка шейдеров
 function initShaders() {
     var fragmentShader = getShader(gl.FRAGMENT_SHADER, 'shader-fs');
@@ -190,6 +190,7 @@ function draw() {
 }
 function setupWebGL()
 {
+    angle += 0.01;
     gl.clearColor(0.0, 0.0, 0.0, 1.0);  
     gl.clear(gl.COLOR_BUFFER_BIT || gl.DEPTH_BUFFER_BIT); 
      
@@ -282,4 +283,11 @@ window.requestAnimFrame = (function(){
     })();
 </script>
 </body>
+<style>
+    html, body {
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow: hidden;
+}
+</style>
 </html>
